--- a/Assigmnet 1.ipynb
+++ b/Assigmnet 1.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -15,6 +17,36 @@
    ],
    "source": [
     "print(\"FATİH\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1 -3.69\n",
+      "0.2 -3.36\n",
+      "0.30000000000000004 -3.01\n",
+      "0.4 -2.6399999999999997\n",
+      "0.5 -2.25\n",
+      "0.6 -1.8400000000000003\n",
+      "0.7 -1.4100000000000006\n",
+      "0.7999999999999999 -0.96\n",
+      "0.8999999999999999 -0.4900000000000002\n",
+      "0.9999999999999999 -8.881784197001252e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0.1\n",
+    "for i in range (0,10):\n",
+    "    a=x**2+3*x-4    \n",
+    "    print(x,a)\n",
+    "    x +=0.1"
    ]
   }
  ],
