--- a/Assigmnet 1.ipynb
+++ b/Assigmnet 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -11,12 +11,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FATİH\n"
+      "FATİH ÇETİN\n"
      ]
     }
    ],
    "source": [
-    "print(\"FATİH\")\n"
+    "print(\"FATİH ÇETİN\")\n"
    ]
   },
   {
