--- a/Assigmnet 1.ipynb
+++ b/Assigmnet 1.ipynb
@@ -21,33 +21,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1 -3.69\n",
-      "0.2 -3.36\n",
-      "0.30000000000000004 -3.01\n",
-      "0.4 -2.6399999999999997\n",
-      "0.5 -2.25\n",
-      "0.6 -1.8400000000000003\n",
-      "0.7 -1.4100000000000006\n",
-      "0.7999999999999999 -0.96\n",
-      "0.8999999999999999 -0.4900000000000002\n",
-      "0.9999999999999999 -8.881784197001252e-16\n"
+      "0.20 -3.36\n",
+      "0.30 -3.01\n",
+      "0.40 -2.64\n",
+      "0.50 -2.25\n",
+      "0.60 -1.84\n",
+      "0.70 -1.41\n",
+      "0.80 -0.96\n",
+      "0.90 -0.49\n",
+      "1.00 -0.00\n",
+      "1.10 0.51\n"
      ]
     }
    ],
    "source": [
     "x=0.1\n",
     "for i in range (0,10):\n",
+    "    x +=0.1\n",
     "    a=x**2+3*x-4    \n",
-    "    print(x,a)\n",
-    "    x +=0.1"
+    "    print(\"%1.2f\" %x,\"%1.2f\" %a)\n",
+    "   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
