--- a/Assigmnet 1.ipynb
+++ b/Assigmnet 1.ipynb
@@ -54,12 +54,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142141342163086\n"
+     ]
+    }
+   ],
+   "source": [
+    "left=0\n",
+    "right=2\n",
+    "for i in range(100):\n",
+    "    mid=(left+right)/2\n",
+    "    fmid=mid**2-2\n",
+    "    if fmid<=0:\n",
+    "        signmid=-1\n",
+    "    else:\n",
+    "        signmid=1\n",
+    "    \n",
+    "    fleft=left**2-2\n",
+    "    \n",
+    "    if fleft<=0:\n",
+    "        signleft=-1\n",
+    "    else:\n",
+    "        signleft=1\n",
+    "    if signmid==signleft:\n",
+    "        left=mid\n",
+    "    else:\n",
+    "        right=mid\n",
+    "        \n",
+    "    if right-left<0.000001:\n",
+    "        print(mid)\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
